<resources>
    <string name="app_name">Bullseye</string>
    <string name="sign_up_name">Bullseye Admin Login</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="go">GO</string>
    <string name="button">Button</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="stats">Stats</string>
    <string name="welcome">Welcome, %1$s!</string>
    <string name="manage_profiles">Manage Profiles</string>
    <string name="back_to_dashboard">Back To Dashboard</string>
    <string name="delete_progress">Delete Progress</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="warning_message">Selecting \'Yes\' will remove all data from this app, including accounts, sign-in information, and statistics. Are you sure you would like to proceed?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="change_password">Change Password</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="stats_header">%1$s\'s Stats</string>
    <string name="sorting">Sorting</string>
    <string name="memory">Memory</string>
    <string name="export">EXPORT</string>
    <string name="current_user_s_logo">Current user\'s profile picture</string>
    <string name="user_s_logo">User\'s profile picture</string>
    <string name="users_not_found">Either there are no users saved on your device, or something went wrong! Check to make sure that users have been created on this device.</string>
    <string name="admin_sign_in">Admin Sign In</string>
    <string name="choose_profile_picture">Choose Profile Picture</string>
    <string name="sorting_game">Sorting Game</string>
    <string name="matching_game">Matching Game</string>
    <string name="change_name">Change Name</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="game_volume">Game Volume</string>
    <string name="music_volume">Music Volume</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm">confirm</string>
    <string name="change_string">Change %1$s</string>
    <string name="current_password">Current Password</string>
    <string name="admin_btn">%1$s (Admin)</string>
    <string name="plus_icon">plus icon</string>
    <string name="see_all">See all users</string>
    <string name="more_users">More Users</string>

    <string name="time">%1$s:%2$s</string>
    <string name="final_time">Your time was:\n%1$s</string>
    <string name="points">Pairs: %1$d</string>
    <string name="high_score">High Score: %1$s:%2$s</string>

    <string name="num">%1$d</string>
    <string name="survived_for">You lasted for:\n%1$s</string>
    <string name="memory_game">Memory Game</string>
    <string name="start">Start</string>
    <string name="slow">Slow</string>
    <string name="fast">Fast</string>
    <string name="speed">Speed</string>
    <string name="right_bucket_desc">pink bucket on the right of the screen</string>
    <string name="left_bucket_desc">brown bucket on the left of the screen</string>
    <string name="play_again">Play Again</string>
    <string name="_00_00">00:00</string>
    <string name="add_user">Add User</string>
    <string name="high_score_00_00">High Score: 00:00</string>
    <string name="games_played">Games Played: %1$s</string>
    <string name="average_time">Play Time: %1$s</string>
    <string name="accuracy">Accuracy: %1$s</string>
    <string name="high_score_stats">High Score: %1$s</string>
    <string name="avg_ppg">Average Focus Points Per Game: %1$s</string>
    <string name="enter_email">Enter Email</string>
    <string name="send_support_email">Send Support Email</string>
    <string name="back_to_login">Back to Login</string>
    <string name="how_to_play">How To Play</string>
    <string name="back_to_game">Back to %1$s</string>
    <string name="tb_points">You Got %1$d Points!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">bullseye_channel</string>
    <string name="channel_description">Bullseye App Notifications</string>
    <string name="music">Music</string>
    <string name="sounds">Sounds</string>
    <string name="strategy">Strategy</string>
    <string name="change_email">Change Email</string>
    <string name="strategy_game">Strategy Game</string>
    <string name="meet_the_characters">Meet the Characters</string>
</resources>