

<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/color1"
    tools:context=".activities.AdminSignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:theme="@style/SignInText"
            android:autofillHints="@string/name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/password"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:theme="@style/SignInText" />

            <CheckBox
                android:id="@+id/togglePass"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@drawable/selector_check"
                android:buttonTint="@color/color4"
                android:theme="@style/CheckBox" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/forgot_password"
            android:textAlignment="center" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn"
        android:layout_width="194dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/color4"
        android:text="@string/go"
        android:transitionName="bigButton"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92"
        app:rippleColor="@color/color5" />

</androidx.constraintlayout.widget.ConstraintLayout>