<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1"
    tools:context=".activities.AdminSettingsActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/manageProfiles"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.02"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/manage_profiles"
        android:textAllCaps="false"
        android:textColor="@color/color1"
        android:textSize="20sp"
        app:cornerRadius="11dp"
        app:layout_constraintBottom_toTopOf="@+id/backToDashboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/color5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/changePassword"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.02"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="@color/color1"
        android:textSize="20sp"
        app:cornerRadius="11dp"
        app:layout_constraintBottom_toTopOf="@+id/manageProfiles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/color5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backToDashboard"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.02"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/back_to_dashboard"
        android:textAllCaps="false"
        android:textColor="@color/color1"
        android:textSize="20sp"
        app:cornerRadius="11dp"
        app:layout_constraintBottom_toTopOf="@+id/deleteProgress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/color5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteProgress"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.02"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/delete_progress"
        android:textAllCaps="false"
        android:textColor="@color/color1"
        android:textSize="20sp"
        app:backgroundTint="#FF0000"
        app:cornerRadius="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/color5" />

</androidx.constraintlayout.widget.ConstraintLayout>