<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1"
    tools:context=".activities.GamesActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backToDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/roboto"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:text="@string/back_to_dashboard"
        android:textAllCaps="false"
        android:textColor="@color/color1"
        android:textSize="22sp"
        app:cornerRadius="20dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/userWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:textColor="@color/color4"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Username Here" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/matchingGameButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/memCardColor2"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.02"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/matching_game"
        android:textAllCaps="false"
        android:textColor="@color/memText"
        android:textSize="27sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userWelcomeText"
        app:rippleColor="@color/color5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sortingGameButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/sortingBackground"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.02"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/sorting_game"
        android:textAllCaps="false"
        android:textColor="@color/color1"
        android:textSize="27sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matchingGameButton"
        app:rippleColor="@color/sortingRight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/turnBasedGameButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/tbBackground"
        android:fontFamily="@font/roboto"
        android:letterSpacing="0.02"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/strategy_game"
        android:textAllCaps="false"
        android:textColor="@color/tbText"
        android:textSize="27sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortingGameButton"
        app:rippleColor="@color/tbSecondary" />
</androidx.constraintlayout.widget.ConstraintLayout>